home page done search page few changes

--- a/shop/ClientApp/src/app/footer/footer.component.html
+++ b/shop/ClientApp/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
                 <p>Сообщества OLX.ua в социальных сетях</p>
                 <p class="mb-0">Сервис объявлений № 1 в Украине</p>
                 <p class="mb-0">Все онлайн-объявления Украины на OLX - здесь вы найдете то, что искали! Нажав на кнопку
-                    <a href="#">"Подать объявление"</a>, вы сможете разместить объявление на любую тематику легко и
+                    <a routerLink="/post-new-ad">"Подать объявление"</a>, вы сможете разместить объявление на любую тематику легко и
                     быстро.</p>
                 <p>С помощью сервиса OLX вы сможете купить или продать из рук в руки практически все, что угодно.</p>
             </div>
@@ -31,11 +31,15 @@
         </div>
         <hr>
         <div>
-            <p>
-                <strong>Разделы на сервисе OLX:</strong> Детский мир, Недвижимость, Транспорт, Запчасти для транспорта,
-                Работа, Животные, Дом и сад, Электроника, Бизнес и услуги, Мода и стиль, Хобби, отдых и спорт, Отдам
-                даром, Обмен
-            </p>
+            <div>
+                <strong>Разделы на сервисе OLX:</strong>
+                <ul style="margin: 0;padding: 0;list-style-type: none;">
+                    <li style="display: inline;" *ngFor="let category of categories">
+                        <a href="javascript:void" class="mr-2"
+                         (click)="ItemClicked(category.categoryId)">{{category.name}},</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <hr>
         <div>
