--- a/shop/ClientApp/src/app/home/home.component.css
+++ b/shop/ClientApp/src/app/home/home.component.css
@@ -1,49 +1,17 @@
-.search-form{
+.search_form{
     background-color: #0098d0;
     border-radius: 5px;
-}
-.gridCategory{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    
 }
 
-.gridItem:nth-child(1){
- grid-row: 1;
- grid-column: 1;
+.crop{
+    overflow:hidden; 
+  white-space:nowrap; 
+  text-overflow:ellipsis; 
+  width:125px; 
 }
-.gridItem:nth-child(2){
-    grid-row: 1;
-    grid-column: 2;
-   }
-   .gridItem:nth-child(3){
-    grid-row: 1;
-    grid-column: 3;
-   }
-   .gridItem:nth-child(4){
-    grid-row: 1;
-    grid-column: 4;
-   }
 
-   .gridItem:nth-child(5){
-    grid-row: 3;
-    grid-column: 1;
-   }
-   .gridItem:nth-child(6){
-    grid-row: 3;
-    grid-column: 2;
-   }
-   .gridItem:nth-child(7){
-    grid-row: 3;
-    grid-column: 3;
-   }
-   .gridItem:nth-child(8){
-    grid-row: 3;
-    grid-column: 4;
-   }
-   .gridItem:nth-child(9){
-    grid-row: 3;
-    grid-column: 4;
-   }
+
 
    
 
