--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -60,27 +60,28 @@
             </div>
         </div>
         <div class="mt-3">
-            <div class="mb-2 col-3">
+            <div class="mb-2 col-3 px-0">
                 <input type="number"  class="form-control" placeholder="Цена от (грн.)" value="-1" name="priceMin" id="priceMin" ngModel>
             </div>
-            <div class="col-3">
+            <div class="col-3 px-0">
                 <input type="number" class="form-control" placeholder="Цена до (грн.)" value="-1" name="priceMax" id="priceMax" ngModel>
             </div>
         </div>
-        <div class="row mt-3" style="justify-content: flex-end;">
-            <div>
-                <a href="#" class="btn">Добавить в избранное</a>
+        
+            <div class="row mt-3 mx-0" style="justify-content: flex-end;">
+                <div class="search_button_outline">
+                    <i class="fa fa-search" aria-hidden="true" ></i>
+                    <input type="submit" value="Найти" class="btn btn-outline-primary">
+                </div>
             </div>
-            <div class="input_with_Icon ml-2">
-                <input type="submit" value="Поиск" class="btn btn-primary">
-            </div>
-        </div>
+       
+        
         <div class="row mt-3">
             <div>
-                <a (click)="SearchByAscOrder()" class="btn">Самые дешевые</a>
+                <a (click)="SearchByAscOrder()" class="btn btn_sort">Самые дешевые</a>
             </div>
-            <div>
-                <a (click)="SearchByDescOrder()" class="btn">Самые дорогие</a>
+            <div class="ml-2">
+                <a (click)="SearchByDescOrder()" class="btn btn_sort">Самые дорогие</a>
             </div>
         </div>
     </form>
@@ -110,14 +111,14 @@
                                 <a  class="card-title">{{item.title}}</a>
                             </div>
                             <div class="col-6 text-right">
-                                <strong>{{item.price}} uah</strong>
+                                <strong class="ad_price">{{item.price |  number: '2.' }} грн.</strong>
                             </div>
                         </div>
                         <div>
-                            <small>subcategory {{item.subCategoryId}}</small>
+                            <small> {{item.category.name}} - {{item.subCategory.name}}</small>
                         </div>
                         <div>
-                            <small class="text-muted">{{item.desc}}</small>
+                            <small class="text-muted">{{item.city.name}}</small>
                         </div>
                     </div>
                 </div>
