--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -98,27 +98,29 @@
         <div *ngFor="let item of ads" class="card my-3">
             <div class="row no-gutters">
                 <div class="col-2">
-                    <a (click)="Details(item.adId)">
-                        <img style="width: 100%;"
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ-eXU7nuTNc2WpFt58LTyr7Cjx5hX_TfR09KFMDZu3dDbknnF6&usqp=CAU"
-                            class="card-img">
+                    <a href="javascript:void(0)" (click)="Details(item.adId)">
+                        <img style="width: 100%;" src="{{imageExample}}" class="card-img">
                     </a>
                 </div>
-                <div class="col-10">
-                    <div class="p-2">
+                <div class="col-10" style="position: relative;">
+                    <div class="p-2" >
                         <div class="row">
                             <div class="col-6">
-                                <a  class="card-title">{{item.title}}</a>
+                                <a href="javascript:void(0)" (click)="Details(item.adId)" style="font-size: 18px;" 
+                                class="card-title">{{item.title}}</a>
                             </div>
                             <div class="col-6 text-right">
                                 <strong class="ad_price">{{item.price |  number: '2.' }} грн.</strong>
                             </div>
                         </div>
-                        <div>
-                            <small> {{item.category.name}} - {{item.subCategory.name}}</small>
+                        <div class="ad_cat_subcat">
+                            <span> {{item.category.name}} - {{item.subCategory.name}}</span>
                         </div>
-                        <div>
-                            <small class="text-muted">{{item.city.name}}</small>
+                        <div class="ad_city" >
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            <span>{{item.city.name}}</span>
+                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                            <span>Сегодня 08:11</span>
                         </div>
                     </div>
                 </div>
