--- a/shop/ClientApp/src/app/success/success.component.html
+++ b/shop/ClientApp/src/app/success/success.component.html
@@ -1,6 +1,6 @@
 <div class="main_content text-center my-5">
-    <h1>WooHoo, you successfully added ad</h1>
-    <div>
-        <a class="nav-link" href="/details?id={{Adid}}">link to your ad</a>
+    <h1>Вы успешно создали объявление !</h1>
+    <div class="my-4">
+        <a style="font-size: 16px;" [routerLink]="['/details', Adid]">Ссылка на объявление</a>
     </div>
 </div>
